<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp"
    android:background="@color/white"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/rating"
                android:padding="40dp"
                android:text="@string/rating"
                android:id="@+id/tvrating"
                android:textColor="@color/black"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calls"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/desc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:id="@+id/tvname"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/location"
            android:id="@+id/tvlocation"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phone_no"
            android:textColor="@color/black"
            android:id="@+id/tvnumber"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:id="@+id/tvdesc"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="114dp"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:src="@drawable/message" />

        <ImageView
            android:layout_width="114dp"
            android:layout_height="92dp"
            android:layout_weight="1"

            android:src="@drawable/direction" />

    </LinearLayout>

</LinearLayout>